Fix: calculate z-index and translateZ based on card's position instead of DOM indexing

--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
 }
 
 :root {
-  --background-color: black;
+  --background-color: rgb(27, 27, 27);
 }
 
 html {
@@ -31,17 +31,19 @@ body {
 }
 
 #carousel {
-  /* Carousel window */
-  width: 600px;
+  width: 100dvw;
   height: 600px;
 
-  /* ! DEBUGGING STYLE 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* ! DEBUGGING STYLE */
   background-color: white;
-  border: 2px solid blue;*/
+  border: 0px solid blue;
 }
 
 #cards-container {
-  width: 100%;
+  width: fit-content;
   height: 100%;
   display: flex;
   justify-content: center;
@@ -51,27 +53,31 @@ body {
   overflow: auto;
   /*scroll-snap-type: x mandatory;*/
 
-  /* ! DEBUGGING STYLE
-  background-color: black;
-  border: 2px solid black;*/
+  /* Perspective settings */
+  perspective: 1000px;
+  perspective-origin: center center;
+  transform-style: preserve-3d;
+
+  /* ! DEBUGGING STYLE */
+  background-color: yellow;
+  border: 0px solid black;
 }
 
 .card {
   width: 600px;
   height: 600px;
   flex: 0 0 auto;
-  font-size: 80px;
+  font-size: 320px;
   display: flex;
   justify-content: center;
   align-items: center;
-  transition: translate 300ms ease-out; /* cubic-bezier(0.34, 1.2, 0.64, 1) */
+  transition: transform 300ms ease-out; /* cubic-bezier(0.34, 1.2, 0.64, 1) */
   /* Important for swiping */
   /*scroll-snap-align: center;*/
-
-  /* ! BUG: jagged edges during horizontal translation */
-  will-change: translate;
 
   /* ! DEBUGGING STYLE 
   background-color: rgba(255, 0, 0, 0.411); */
   /*border: 2px solid black;*/
+
+  /* ! BUG: jagged vertical edges */
 }
